--- a/kb.html
+++ b/kb.html
@@ -119,7 +119,7 @@
     <div class="header-content">
         <img src="logo.png" alt="Konkani Bhajans Logo">
         <div>
-            <h1>Konkani Bhajans Channel</h1>
+            <h1>Konkani Bhajans</h1>
             <p>Evergreen Konkani Bhajans Forever</p>
         </div>
     </div>
