--- a/kb.html
+++ b/kb.html
@@ -7,10 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #ff8c00; 
+            --primary: #ff8c00; 
             --yt-red: #ff0000;
-            --dark-bg: #121212;
-            --glass: rgba(255, 255, 255, 0.98);
+            --dark: #121212;
+            --white: #ffffff;
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
@@ -18,8 +18,8 @@
 
         /* Navigation */
         nav {
-            background: var(--glass);
-            padding: 12px 5%;
+            background: var(--white);
+            padding: 15px 5%;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -29,13 +29,13 @@
             z-index: 1000;
         }
 
-        .logo-area { display: flex; align-items: center; gap: 10px; text-decoration: none; color: #1a1a1a; }
-        .logo-area img { height: 40px; width: 40px; border-radius: 50%; border: 2px solid var(--primary-color); }
+        .logo-area { display: flex; align-items: center; gap: 12px; text-decoration: none; color: #1a1a1a; font-weight: 700; }
+        .logo-area img { height: 45px; width: 45px; border-radius: 50%; border: 2px solid var(--primary); }
 
         .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 600; font-size: 0.9rem; transition: 0.3s; }
-        .nav-links a:hover { color: var(--primary-color); }
+        .nav-links a:hover { color: var(--primary); }
 
-        /* Hero Section - Fixed Background */
+        /* Hero Section */
         .hero {
             position: relative;
             min-height: 80vh;
@@ -46,77 +46,78 @@
             text-align: center;
             color: white;
             padding: 40px 20px;
-            /* Using a direct hosting-friendly way to reference the Varaha image */
+            /* Using the renamed file from your GitHub repo */
             background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)), 
-                        url('https://raw.githubusercontent.com/KonkaniBhajans/konkanibhajans/main/1000078840.jpg'); /* Ensure this filename matches your GitHub repo */
+                        url('hero-bg.jpg'); 
             background-size: cover;
             background-position: center 20%;
             background-attachment: fixed;
         }
 
         .hero h1 { 
-            font-size: 3rem; 
-            font-weight: 700;
+            font-size: 3.5rem; 
             text-transform: uppercase; 
-            margin-bottom: 15px;
-            text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
-            letter-spacing: 1px;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 15px rgba(0,0,0,0.8);
+            letter-spacing: 2px;
         }
 
         .hero p { 
-            font-size: 1.1rem; 
-            margin-bottom: 30px; 
-            max-width: 600px; 
+            font-size: 1.2rem; 
+            margin-bottom: 35px; 
+            max-width: 700px;
+            text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
             font-weight: 300;
-            text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
         }
 
         /* Buttons */
         .btn-group { display: flex; gap: 15px; flex-wrap: wrap; justify-content: center; }
-        .btn { padding: 14px 28px; border-radius: 50px; text-decoration: none; font-weight: 700; transition: 0.3s; font-size: 0.9rem; }
+        .btn { padding: 15px 35px; border-radius: 50px; text-decoration: none; font-weight: 700; transition: 0.3s; font-size: 1rem; }
         .btn-red { background: var(--yt-red); color: white; box-shadow: 0 4px 15px rgba(255,0,0,0.3); }
-        .btn-white { background: white; color: #1a1a1a; }
-        .btn:hover { transform: translateY(-3px); box-shadow: 0 6px 20px rgba(0,0,0,0.3); }
+        .btn-white { background: white; color: #1a1a1a; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .btn:hover { transform: translateY(-3px); box-shadow: 0 8px 25px rgba(0,0,0,0.3); }
 
-        /* Stats Section */
+        /* Stats Card Section */
         .stats { 
             display: grid; 
             grid-template-columns: repeat(3, 1fr); 
-            max-width: 900px; 
-            margin: -50px auto 50px; 
-            background: white; 
-            padding: 30px; 
-            border-radius: 15px; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            max-width: 950px; 
+            margin: -60px auto 60px; 
+            background: var(--white); 
+            padding: 40px; 
+            border-radius: 20px; 
+            box-shadow: 0 15px 40px rgba(0,0,0,0.1);
             position: relative;
             z-index: 10;
         }
-        .stat-item { text-align: center; border-right: 1px solid #eee; }
+        .stat-item { text-align: center; border-right: 1px solid #f0f0f0; }
         .stat-item:last-child { border: none; }
-        .stat-item h2 { color: var(--primary-color); font-size: 1.8rem; }
-        .stat-item p { font-size: 0.8rem; color: #666; font-weight: 600; }
+        .stat-item h2 { color: var(--primary); font-size: 2.2rem; line-height: 1; margin-bottom: 5px; }
+        .stat-item p { font-size: 0.85rem; color: #888; font-weight: 600; letter-spacing: 1px; text-transform: uppercase; }
 
-        /* Video Section */
-        .video-container { max-width: 1100px; margin: 0 auto 80px; padding: 0 20px; }
-        .section-title { text-align: center; margin-bottom: 40px; }
-        .section-title h2 { font-size: 2rem; position: relative; padding-bottom: 10px; }
-        .section-title h2::after { content: ''; width: 60px; height: 4px; background: var(--primary-color); position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); border-radius: 2px; }
+        /* Video Gallery */
+        .video-container { max-width: 1200px; margin: 0 auto 80px; padding: 0 20px; }
+        .section-title { text-align: center; margin-bottom: 50px; }
+        .section-title h2 { font-size: 2.2rem; position: relative; display: inline-block; padding-bottom: 15px; }
+        .section-title h2::after { content: ''; width: 60px; height: 4px; background: var(--primary); position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); border-radius: 2px; }
 
-        .video-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 25px; }
-        .video-card { background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
+        .video-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; }
+        .video-card { background: var(--white); border-radius: 15px; overflow: hidden; box-shadow: 0 5px 20px rgba(0,0,0,0.05); transition: 0.3s; }
+        .video-card:hover { transform: translateY(-10px); }
         .iframe-wrapper { position: relative; padding-bottom: 56.25%; height: 0; background: #000; }
         .iframe-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
-        .video-title { padding: 15px; font-weight: 600; font-size: 1rem; }
+        .video-info { padding: 20px; }
+        .video-info h4 { font-size: 1.1rem; color: #1a1a1a; }
 
         /* Footer */
-        footer { background: var(--dark-bg); color: #888; padding: 60px 20px; text-align: center; }
-        .footer-logo { color: white; font-size: 1.4rem; font-weight: 700; margin-bottom: 15px; display: block; }
-        .footer-mail { color: var(--primary-color); text-decoration: none; font-weight: bold; }
+        footer { background: var(--dark); color: #888; padding: 70px 20px; text-align: center; }
+        .footer-logo { color: white; font-size: 1.6rem; font-weight: 700; margin-bottom: 15px; display: block; }
+        .footer-mail { color: var(--primary); text-decoration: none; font-weight: bold; font-size: 1.1rem; }
 
         @media (max-width: 768px) {
-            .hero h1 { font-size: 2.2rem; }
-            .stats { grid-template-columns: 1fr; gap: 20px; margin-top: 20px; width: 90%; }
-            .stat-item { border-right: none; border-bottom: 1px solid #eee; padding-bottom: 15px; }
+            .hero h1 { font-size: 2.5rem; }
+            .stats { grid-template-columns: 1fr; gap: 25px; margin-top: 20px; width: 92%; padding: 30px; }
+            .stat-item { border-right: none; border-bottom: 1px solid #f0f0f0; padding-bottom: 20px; }
             .stat-item:last-child { border-bottom: none; }
             .nav-links { display: none; }
         }
@@ -127,11 +128,11 @@
     <nav>
         <a href="#" class="logo-area">
             <img src="logo.png" alt="KB Logo">
-            <strong>Konkani Bhajans</strong>
+            <span>Konkani Bhajans</span>
         </a>
         <div class="nav-links">
             <a href="#videos">Videos</a>
-            <a href="mailto:konkanibhajansofficial@gmail.com">Contact</a>
+            <a href="mailto:konkanibhajansofficial@gmail.com">Contact Us</a>
         </div>
     </nav>
 
@@ -145,35 +146,40 @@
     </header>
 
     <section class="stats">
-        <div class="stat-item"><h2>924</h2><p>SUBSCRIBERS</p></div>
-        <div class="stat-item"><h2>11+</h2><p>BHAJANS</p></div>
-        <div class="stat-item"><h2>FREE</h2><p>DISTRIBUTION</p></div>
+        <div class="stat-item"><h2>924</h2><p>Subscribers</p></div>
+        <div class="stat-item"><h2>11+</h2><p>Devotional Videos</p></div>
+        <div class="stat-item"><h2>FREE</h2><p>Promotion</p></div>
     </section>
 
     <main class="video-container" id="videos">
         <div class="section-title">
-            <h2>Recent Uploads</h2>
+            <h2>Soulful Collection</h2>
         </div>
         <div class="video-grid">
             <div class="video-card">
                 <div class="iframe-wrapper">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID_HERE" allowfullscreen></iframe>
                 </div>
-                <div class="video-title">Traditional Konkani Bhajan 1</div>
+                <div class="video-info">
+                    <h4>Traditional Konkani Bhajan</h4>
+                </div>
             </div>
             <div class="video-card">
                 <div class="iframe-wrapper">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID_HERE" allowfullscreen></iframe>
                 </div>
-                <div class="video-title">Traditional Konkani Bhajan 2</div>
+                <div class="video-info">
+                    <h4>Evergreen Devotional Song</h4>
+                </div>
             </div>
         </div>
     </main>
 
     <footer>
         <span class="footer-logo">Konkani Bhajans</span>
-        <p>Contact us: <a href="mailto:konkanibhajansofficial@gmail.com" class="footer-mail">konkanibhajansofficial@gmail.com</a></p>
-        <p style="margin-top: 25px; font-size: 0.75rem;">&copy; 2026 Krishna Pai. All Rights Reserved.</p>
+        <p>Collaborate with us:</p>
+        <a href="mailto:konkanibhajansofficial@gmail.com" class="footer-mail">konkanibhajansofficial@gmail.com</a>
+        <p style="margin-top: 30px; font-size: 0.8rem; opacity: 0.5;">&copy; 2026 Krishna Pai. Celebrating Konkani Culture.</p>
     </footer>
 
 </body>
