--- a/kb.html
+++ b/kb.html
@@ -3,77 +3,216 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konkani Bhajans | Traditional Hub</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lora:wght@400;600&display=swap" rel="stylesheet">
+    <title>Konkani Bhajans | Devotional Hub</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --temple-gold: #d4af37;
-            --royal-red: #8b0000;
-            --deep-saffron: #ff9933;
-            --text-color: #2c3e50;
+            --primary-color: #ff6b00; /* Saffron Devotional Tone */
+            --dark-color: #2c3e50;
+            --light-bg: #f9f9f9;
+            --white: #ffffff;
         }
 
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { background-color: #fffaf0; color: var(--text-color); font-family: 'Lora', serif; line-height: 1.6; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
 
-        /* Traditional Header */
+        body {
+            background-color: var(--light-bg);
+            color: var(--dark-color);
+            line-height: 1.6;
+            scroll-behavior: smooth;
+        }
+
+        /* Navigation */
         nav {
-            background: #fff;
-            padding: 20px 5%;
+            background: var(--white);
+            padding: 1rem 5%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 3px solid var(--temple-gold);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
-        .logo-area { display: flex; align-items: center; gap: 15px; text-decoration: none; color: var(--royal-red); }
-        .logo-area img { height: 50px; border-radius: 50%; border: 2px solid var(--temple-gold); }
-        .logo-area h1 { font-family: 'Playfair Display', serif; font-size: 1.5rem; }
+        .logo-area {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
 
-        /* Hero Section - 16:9 Cinematic Ratio */
+        .logo-area img {
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        .nav-links a {
+            text-decoration: none;
+            color: var(--dark-color);
+            margin-left: 20px;
+            font-weight: 500;
+            transition: color 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: var(--primary-color);
+        }
+
+        /* Hero Section - Optimized for 16:9 Aspect Ratio */
         .hero {
-            position: relative;
-            width: 100%;
-            height: 56.25vw; /* 16:9 Ratio */
-            max-height: 70vh;
-            min-height: 350px;
-            background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('hero-bg.jpg');
+            background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.6)), url('hero-bg.jpg'); 
             background-size: cover;
-            background-position: center;
+            background-position: center 25%;
+            background-attachment: fixed;
+            color: white;
+            padding: 80px 5%;
+            text-align: center;
+            width: 100%;
+            height: 56.25vw; /* Perfectly maintains 16:9 ratio */
+            min-height: 400px;
+            max-height: 80vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            text-align: center;
-            color: white;
-            border-bottom: 5px solid var(--temple-gold);
         }
 
-        .hero h2 { font-family: 'Playfair Display', serif; font-size: clamp(2rem, 5vw, 4rem); text-shadow: 2px 2px 10px rgba(0,0,0,0.7); }
-        .hero p { font-size: 1.2rem; font-style: italic; margin-top: 10px; }
+        .hero h1 {
+            font-size: clamp(2rem, 5vw, 3.5rem);
+            margin-bottom: 10px;
+            text-shadow: 0 0 20px rgba(0,0,0,0.8), 0 0 10px rgba(255,107,0,0.4);
+        }
 
-        /* Call to Action Buttons */
-        .btn-box { margin-top: 30px; display: flex; gap: 20px; }
-        .btn { padding: 12px 30px; text-decoration: none; font-weight: bold; border-radius: 2px; transition: 0.3s; text-transform: uppercase; letter-spacing: 1px; }
-        .btn-red { background: var(--royal-red); color: white; border: 1px solid var(--royal-red); }
-        .btn-gold { border: 2px solid var(--temple-gold); color: white; }
-        .btn:hover { background: var(--deep-saffron); color: white; border-color: var(--deep-saffron); }
+        .hero p {
+            font-size: clamp(1rem, 2vw, 1.2rem);
+            margin-bottom: 25px;
+            opacity: 0.9;
+        }
 
-        /* Traditional Card Layout */
-        .container { max-width: 1100px; margin: 60px auto; padding: 0 20px; }
-        .section-title { text-align: center; font-family: 'Playfair Display', serif; font-size: 2.5rem; color: var(--royal-red); margin-bottom: 40px; }
-        
-        .video-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 30px; }
-        .video-card { background: white; padding: 10px; border: 1px solid #eee; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
-        .video-wrapper { position: relative; padding-bottom: 56.25%; height: 0; }
-        .video-wrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
-        .video-info { padding: 15px; text-align: center; border-top: 2px solid var(--temple-gold); margin-top: 10px; }
+        .btn-subscribe {
+            background-color: #ff0000; /* YouTube Red */
+            color: white;
+            padding: 12px 30px;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: bold;
+            display: inline-block;
+            transition: transform 0.3s;
+        }
 
-        footer { background: #fdf5e6; padding: 60px 20px; text-align: center; border-top: 3px solid var(--temple-gold); }
-        .footer-mail { color: var(--royal-red); font-weight: bold; font-size: 1.2rem; text-decoration: none; }
+        .btn-subscribe:hover {
+            transform: scale(1.05);
+        }
+
+        /* Stats Bar */
+        .stats-bar {
+            display: flex;
+            justify-content: center;
+            gap: 50px;
+            padding: 20px;
+            background: var(--white);
+            margin-top: -30px;
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            position: relative;
+            z-index: 5;
+        }
+
+        .stat-item b {
+            font-size: 1.5rem;
+            color: var(--primary-color);
+        }
+
+        /* Main Content */
+        .container {
+            max-width: 1100px;
+            margin: 40px auto;
+            padding: 0 20px;
+        }
+
+        .section-title {
+            text-align: center;
+            margin-bottom: 30px;
+            position: relative;
+        }
+
+        .section-title::after {
+            content: '';
+            width: 50px;
+            height: 3px;
+            background: var(--primary-color);
+            display: block;
+            margin: 10px auto;
+        }
+
+        .notification-card {
+            background: #fff3e0;
+            border-left: 5px solid var(--primary-color);
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 40px;
+        }
+
+        /* Video Grid */
+        .video-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 20px;
+        }
+
+        .video-card {
+            background: var(--white);
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            transition: transform 0.3s;
+        }
+
+        .video-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .iframe-wrapper {
+            width: 100%;
+            aspect-ratio: 16/9;
+            background: #000;
+        }
+
+        .iframe-wrapper iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        .video-info {
+            padding: 15px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 40px;
+            background: var(--dark-color);
+            color: white;
+            margin-top: 50px;
+        }
+
+        .contact-link {
+            color: var(--primary-color);
+            text-decoration: none;
+            font-weight: bold;
+        }
 
         @media (max-width: 768px) {
-            .hero { height: auto; padding: 80px 20px; }
+            .hero { height: auto; min-height: 450px; }
+            .stats-bar { flex-direction: column; gap: 10px; text-align: center; margin-top: 20px; width: 90%; }
             .nav-links { display: none; }
         }
     </style>
@@ -81,44 +220,5 @@
 <body>
 
     <nav>
-        <a href="#" class="logo-area">
-            <img src="logo.png" alt="Logo">
-            <h1>Konkani Bhajans</h1>
-        </a>
-        <div class="nav-links">
-            <a href="mailto:konkanibhajansofficial@gmail.com" style="text-decoration:none; color:var(--royal-red); font-weight:bold;">Contact Us</a>
-        </div>
-    </nav>
-
-    <header class="hero">
-        <h2>Konkani Bhajans</h2>
-        <p>Preserving our sacred traditions through melody</p>
-        <div class="btn-box">
-            <a href="https://www.youtube.com/@konkanibhajans" class="btn btn-red">Subscribe</a>
-            <a href="mailto:konkanibhajansofficial@gmail.com" class="btn btn-gold">Submit Entry</a>
-        </div>
-    </header>
-
-    <main class="container">
-        <h3 class="section-title">Devotional Collection</h3>
-        <div class="video-grid">
-            <div class="video-card">
-                <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
-                </div>
-                <div class="video-info">
-                    <h4>Traditional Bhajan</h4>
-                </div>
-            </div>
-            </div>
-    </main>
-
-    <footer>
-        <p>Join our mission to keep Konkani culture alive.</p>
-        <br>
-        <a href="mailto:konkanibhajansofficial@gmail.com" class="footer-mail">konkanibhajansofficial@gmail.com</a>
-        <p style="margin-top: 30px; font-size: 0.8rem; color: #999;">&copy; 2026 Krishna Pai. Built with Devotion.</p>
-    </footer>
-
-</body>
-</html>
+        <div class="logo-area">
+            <img src="logo.
