--- a/kb.html
+++ b/kb.html
@@ -192,33 +192,4 @@
             border: none;
         }
 
-        .video-info {
-            padding: 15px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 40px;
-            background: var(--dark-color);
-            color: white;
-            margin-top: 50px;
-        }
-
-        .contact-link {
-            color: var(--primary-color);
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        @media (max-width: 768px) {
-            .hero { height: auto; min-height: 450px; }
-            .stats-bar { flex-direction: column; gap: 10px; text-align: center; margin-top: 20px; width: 90%; }
-            .nav-links { display: none; }
-        }
-    </style>
-</head>
-<body>
-
-    <nav>
-        <div class="logo-area">
-            <img src="logo.
+        .video-info
